Minigames: add Random Arena menu item